# VibeWiki

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
.vibewiki/: agent.json  config.yaml  skill_registry.yaml
docs/: agent-integration.md  demo.md  design.md  ecosystem.md  improvement_backlog.md  mvp.md  research_ctx2skill.md  research_ecc.md  research_llm_wiki.md  research_recensa.md  roadmap.md
docs/assets/: README.md
docs/wiki/: development_notes.md  directions.md  ideas.md  index.md  knowledge.md  known_issues.md  project_brief.md  research_notes.md  todos.md
examples/general/: README.md  sample_session.md
examples/venus/: README.md  sample_diff.patch  sample_session.md
examples/venus/real_sessions/cmxmul_ofdm/: README.md  diff.patch  raw_session.md  session.md
examples/venus/real_sessions/cmxmul_ofdm/generated_patches/: agent_rule_patch.md  knowledge_patch.md  questions.md  skill_patch.md
skills/: index.md
skills/prompt_patterns/: index.md
skills/skilllets/: index.md
skills/workflows/: index.md
templates/: agents_template.md  config.yaml  skill_template.md  wiki_index.md
tests/: test_agent_bridge.py  test_cli_flow.py
vibewiki/: __init__.py  agent_install.py  agent_memory.py  assurance.py  capture.py  cli.py  control_center.py  conversations.py  dashboard.py  distill.py  doctor.py  events.py  git_utils.py  import_markdown.py  import_url.py  llm.py  mcp_server.py  memory_cards.py  merge.py  models.py  project.py  project_understanding.py  registry.py  retrieval.py  review.py  review_board.py  review_plan.py  review_ui.py  setup_wizard.py  text_utils.py  translation.py  validate.py
vibewiki/prompts/: distill_session.md  generate_questions.md  generate_skill.md
