[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibewiki"
version = "0.1.0"
description = "Turn AI conversations into reviewed personal and project memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "VibeWiki contributors" }
]
keywords = [
  "ai-coding",
  "ai-memory",
  "agent-memory",
  "agents",
  "developer-tools",
  "knowledge-management",
  "llm",
  "personal-knowledge-base",
  "project-memory",
  "team-wiki",
  "vibe-coding",
  "wiki",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
vibewiki = "vibewiki.cli:main"

[tool.setuptools.packages.find]
include = ["vibewiki*"]
